Use Vimeo's "do not track" flag: `&dnt=1`

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ import prob_0_1_0_8_400 from '~/assets/prob_0-1_0-8_400.png'
   <section class="flex flex-col items-center justify-center p-4">
     <iframe
       title="vimeo-player"
-      src="https://player.vimeo.com/video/806844587?h=7f385a19b3"
+      src="https://player.vimeo.com/video/806844587?h=7f385a19b3&dnt=1"
       width="640"
       height="360"
       class=""
